--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -48,9 +48,9 @@
 </view>
 </block>
 
-    <loading hidden="{{loading}}">
+    <loading hidden="{{loadingHidden}}">
         加载中...
     </loading>
-    <modal title="啊哦！" confirm-text="重新加载！" no-cancel  hidden="{{modal}}" bindconfirm="Request">
+    <modal title="啊哦！" confirm-text="重新加载！" no-cancel  hidden="{{modalHidden}}" bindconfirm="Request">
         <icon type="warn" size="20" />加载失败！
     </modal>
